# lvgl_9.5

./: 7inch-tab-opendps-latest.yaml  7inch-tab.yaml  LICENSE  LVGL_SRM_PR_HANDOFF.md  NOTICE  README.md  boxs3.yaml  ken_burns_example.yaml  lans.yaml  lvgl_esphome.cpp  p4mini.yaml  ppa_rotation_example.yaml  test-lvgl9.yaml  testesp32s3.yaml  waveshare (3).yaml  waveshare ken.yaml
components/YAML/: p4mini (1).yaml  waveshare (2).yaml  waveshare.yaml
components/font/: font.cpp
components/image/: __init__.py  image.cpp
components/lottie_state_machine/: __init__.py  example.yaml  lottie_state_machine.h
components/lvgl/: WIDGETS_CHEATSHEET.md  WIDGETS_GUIDE.md  __init__.py  atomic_h_patch.py.inc  automation.py  defines.py  encoders.py  lottie_loader.h  lv_draw_ppa_wrapper.cpp  lv_freertos.c  lv_freertos.c.inc  lv_freertos_patched.c  lv_freertos_psram.c.inc  lvgl_build_filter.py  lvgl_esphome.cpp  lvgl_esphome.h  lvgl_fps_benchmark.c  lvgl_fps_benchmark.cpp  lvgl_fps_benchmark.h  lvgl_fps_benchmark_wrapper.cpp  schemas.py  sdl_test.yaml  svg_loader.h
components/lvgl/fps/: lvgl_fps_benchmark.c
components/lvgl_kawaii_face/: README.md  __init__.py  example.yaml  example_esp32p4_waveshare.yaml  kawaii_face.h
components/thorvg/: CMakeLists.txt  Kconfig
lvgl_kawaii_face-main/: CMakeLists.txt  README.md  idf_component.yml
lvgl_kawaii_face-main/exemples/basic_cycle/: CMakeLists.txt
lvgl_kawaii_face-main/exemples/basic_cycle/main/: CMakeLists.txt  main.c
lvgl_kawaii_face-main/include/: lvgl_kawaii_face.h
web/: app.js
yaml/: habbit.yaml
(+56 files in other folders)
